# pysistence

./: LICENSE  Readme.md  pyproject.toml
.github/workflows/: main.yml
pysistence/: Plist.py  __init__.py  ipersistent.py  plist.py
pysistent/: ipersistent.py  plist.py
tests/: test_plist.py
