[tool.poetry]
name = "pysistence"
version = "0.1.0"
description = "Persistent data structures for python"
authors = ["Abhinav Omprakash"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
Sphinx = "^4.1.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
